styles: ajustes no design

--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -5,7 +5,6 @@
     align-items: flex-start;
     gap: .5rem;
     width: 100%;
-    max-width: 355px;
     border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 2rem 1.5rem;
 }
@@ -39,10 +38,22 @@
     color: white;
     font-weight: 500;
     font-size: var(--f-headline);
+    cursor: pointer;
+    transition: all .2s;
+}
+
+.form input[type=submit]:hover {
+    background-color: var(--color-primary-2);
 }
 
 .form>span {
     font-weight: var(--w-body);
     font-size: var(--f-body);
     color: var(--grey-3);
+}
+
+@media (min-width: 1024px) {
+    .form {
+        max-width: 355px;
+    }
 }
