--- a/src/components/Resume.module.css
+++ b/src/components/Resume.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: flex-start;
     gap: 1rem;
+    padding-bottom: 1.5rem;
 }
 
 .resume h2 {
@@ -16,4 +17,14 @@
     font-size: var(--f-title-2);
     font-weight: var(--w-title-2);
     color: #343A40;
+}
+
+
+.resume ul {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
 }
