--- a/src/components/Total.module.css
+++ b/src/components/Total.module.css
@@ -2,6 +2,7 @@
     padding: 1rem 1.5rem;
     border: 1px solid var(--grey-2);
     border-radius: 4px;
+    width: 100%;
 }
 
 .totalContainer div {
